--- a/locales/es.json
+++ b/locales/es.json
@@ -96,7 +96,8 @@
     "general": {
       "title": "Colecciones",
       "no_matches": "Lo sentimos, no hay productos que coincidan con su búsqueda.",
-      "link_title": "Navegue por nuestra colección {{ title }}"
+      "link_title": "Navegue por nuestra colección {{ title }}",
+      "view_all": "View all"
     },
     "sorting": {
       "title": "Ordenar por",
