--- a/locales/pt-BR.json
+++ b/locales/pt-BR.json
@@ -96,7 +96,8 @@
     "general": {
       "title": "Coleções",
       "no_matches": "Desculpe, mas não há produtos correspondentes à sua busca.",
-      "link_title": "Explore a nossa coleção {{ title }}"
+      "link_title": "Explore a nossa coleção {{ title }}",
+      "view_all": "View all"
     },
     "sorting": {
       "title": "Ordenar por",
